--- a/SpaDay/Views/Spa/Menu.cshtml
+++ b/SpaDay/Views/Spa/Menu.cshtml
@@ -1,8 +1,11 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿<p>
+    <a asp-controller="Spa" asp-action="Index">Spa</a>
+</p>
+
+<p>
+    <a asp-controller="User" asp-action="Add">Add User</a>
+</p>
+
 <h1>Fancy Spa</h1>
 <div id="clientProfile">
     <h3>Client profile</h3>
