--- a/SpaDay/Views/User/Index.cshtml
+++ b/SpaDay/Views/User/Index.cshtml
@@ -1,8 +1,18 @@
 ﻿@{
 }
 
-<h1>Welcome to our spa, @ViewBag.user.Username!</h1>
+@using SpaDay.Models;
+@model User;
 
-<p>
-    <a asp-controller="Spa" asp-action="Index">Select Spa Services</a>
-</p>
+@if (Model != null)
+{
+    <h1>Welcome to our spa @Model.Username!</h1>
+
+    <p>
+        <a asp-controller="Spa" asp-action="Index">Select Spa Services</a>
+    </p>
+}
+else
+{
+    <h1>Welcome to our spa!</h1>
+}
